# julmalloc

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.MD  cmakereleasedebug.sh  generate_libraries.sh
alloc/: CMakeLists.txt  defines.h  methods.h  storage.h  strats.h  tableio.h  tableopts.h  types.h
alloc/sources/: memory_mgmt.c  methods.c  storage.c  strats.c  tableio.c  tableopts.c
allocation/: CMakeLists.txt  alloc_functions.h  check_constraints.h  defines.h  mem_driver.h  table_opts.h  types.h
allocation/sources/: alloc_functions.c  alloc_strats.c  check_constraints.c  mem_driver.c  table_opts.c
core/: defines.h
programs/: CMakeLists.txt
projects/: alloctests.c
projects/allocation/: testalloc.c
unittests/: CMakeLists.txt  alloctests.c  defines.h  test_that_crash.c
unittests/alloc/: alignment.c  calloc.c  free.c  malloc.c  realloc.c  special_free.c  special_realloc.c
unittests/components/: add_entry.c  remove_entry.c
unittests/strats/: bestfit.c  firstfit.c  nextfit.c  worstfit.c
