add_library(storage sources/storage.c)
add_library(methods sources/methods.c)
add_library(strats sources/strats.c)
add_library(tableio sources/tableio.c)
add_library(tableopts sources/tableopts.c)

target_link_libraries(tableio storage m)
target_link_libraries(tableopts tableio)
target_link_libraries(tableopts strats)
target_link_libraries(methods tableopts)